# vTeam

./: .claudeignore  .gitignore  .repomixignore  AMBER_SETUP.md  BACKEND_CONTEXT_MANAGEMENT.md  BUGFIX_WORKSPACE.md  CLAUDE.md  CONTRIBUTING.md  GOOGLE_WORKSPACE_MCP_INTEGRATION.md  MIGRATION_GUIDE_GIT_REFACTOR.md  Makefile  QUICK_START.md  README.md  REFACTORING_ADDENDUM.md  REFACTORING_SUMMARY.md  REFACTOR_SESSIONS.md  docs-plan.md  mkdocs.yml  package-lock.json
.claude/: amber-config.yml  repomix-guide.md
.claude/commands/: implement.md
.claude/context/: backend-development.md  frontend-development.md  security-standards.md
.claude/patterns/: error-handling.md  k8s-client-usage.md  react-query-usage.md
.github/ISSUE_TEMPLATE/: amber-auto-fix.yml  amber-refactor.yml  amber-test-coverage.yml  config.yml
.github/workflows/: README.md  ai-assessment-comment-labeler.yml  amber-auto-review.yml  amber-dependency-sync.yml  amber-issue-handler.yml  bugfix-tests.yml  claude-code-review.yml  claude.yml  components-build-deploy.yml  docs.yml  e2e.yml  frontend-lint.yml  go-lint.yml  makefile-quality.yml  prod-release-deploy.yaml  runner-tests.yml  test-agents-md-symlink.yml  test-local-dev.yml
.specify/memory/: constitution.md
.specify/prompts/: docs-cleanup-plan.md
Prompts/: bug-assessment.prompt.yml  feature-assessment.prompt.yml  general-assessment.prompt.yml
agents/: amber.md  ryan-ux_researcher.md  terry-technical_writer.md
components/: README.md
components/backend/: .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  Dockerfile.dev  JIRA_NOTES.md  Makefile  OAUTH_INTEGRATION.md  README.md  REFACTOR_NOTES.md  git.go  github_app.go  github_token.go  go.mod  (+13 more)
components/runners/claude-code-runner/: .mcp.json  Dockerfile  LANGFUSE_DEBUG_NOTES.md  LANGFUSE_FIX_SUMMARY.md  LANGFUSE_TEST_PLAN.md  adapter.py  context.py  main.py  observability.py  pyproject.toml  security_utils.py  wrapper.py
components/runners/claude-code-runner/tests/: README.md  test_duplicate_turn_prevention.py  test_langfuse_model_metadata.py  test_model_mapping.py  test_observability.py  test_privacy_masking.py  test_security_utils.py  test_wrapper_vertex.py
components/runners/runner-shell/: README.md  pyproject.toml
components/runners/runner-shell/runner_shell/: __init__.py
components/runners/runner-shell/runner_shell/core/: __init__.py  context.py  protocol.py  shell.py  transport_ws.py
docs/: CLAUDE_CODE_RUNNER.md  GITHUB_APP_SETUP.md  LOCAL_DEVELOPMENT.md  OPENSHIFT_DEPLOY.md  OPENSHIFT_OAUTH.md  README.md  SECURITY_DEV_MODE.md  amber-automation.md  amber-quickstart.md  build-metadata.md  decisions.md  gitlab-integration-test-plan.md  gitlab-integration.md  gitlab-self-hosted.md  gitlab-testing-procedures.md  gitlab-token-setup.md  index.md  langfuse-tool-usage-dashboard.md  model-pricing.md  observability-langfuse.md
e2e/: README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json
hack/: automated-deployer.yaml
repomix-analysis/: 03-architecture-only.xml  repomix-analysis-report.md
scripts/: analyze_tool_usage.py  install-git-hooks.sh  sync-amber-dependencies.py  validate-amber-workflows.sh
tests/: README.md  local-dev-test.sh  test_agents_md_symlink.sh
(+725 files in other folders)
