[project]
name = "runner-shell"
version = "0.1.0"
description = "Standardized runner shell for AI agent sessions"
requires-python = ">=3.10"
dependencies = [
    "websockets>=11.0",
    "aiobotocore>=2.5.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
    "anthropic>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
runner-shell = "runner_shell.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["runner_shell*"]
exclude = ["tests*", "adapters*", "core*", "cli*"]